Fixed Background and deleted CSS Foledr

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         color: white;
         margin: 0px;
         padding: 0px;
-        /* background: url(gym.jpg); */
-        background: url(imageweb.jpg);
+        /* background: url(img/gym.jpg); */
+        background: url(img/imageweb.jpg);
         background-size: 1500px;
         /* background-repeat: no-repeat; */
       
